[package]
name = "subscriptions-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
shellexpand = "3.1.0"
signal-hook = "0.3.17"
tokio = { version = "1.35.1", features = ["full"] }

proofs = { path = "../proofs" }

aleph_client  = { git="https://github.com/Cardinal-Cryptography/aleph-node/", features = ["liminal"]}
subxt = { version = "0.32.1" }
subxt-signer = { version = "0.32.1", features = ["subxt"] }

[dev-dependencies]
filepath = "0.1.2"
tempfile = "3.9.0"
