[package]
name = "subscriptions"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }
baby-liminal-extension = { git = "https://github.com/Cardinal-Cryptography/aleph-node", rev = "f8de357", features = ["ink"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "baby-liminal-extension/ink-std"
]
ink-as-dependency = []
